--- a/release-tools/travis.yml
+++ b/release-tools/travis.yml
@@ -1,5 +1,9 @@
 language: go
 sudo: required
+arch:
+  - amd64
+  - s390x
+  
 services:
   - docker
 git:
@@ -9,7 +13,7 @@ matrix:
   - go: 1.13.3
 before_script:
 - mkdir -p bin
-- wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-amd64 -O bin/dep
+- wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-$(go env GOARCH) -O bin/dep
 - chmod u+x bin/dep
 - export PATH=$PWD/bin:$PATH
 script:
