--- a/release-tools/travis.yml
+++ b/release-tools/travis.yml
@@ -8,9 +8,7 @@ services:
   - docker
 git:
   depth: false
-matrix:
-  include:
-  - go: 1.13.3
+go: 1.13.3
 before_script:
 - mkdir -p bin
 - wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-$(go env GOARCH) -O bin/dep
@@ -20,6 +18,6 @@ script:
 - make -k all test GOFLAGS_VENDOR=$( [ -d vendor ] && echo '-mod=vendor' )
 after_success:
   - if [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then
-      docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}" quay.io;
-      make push GOFLAGS_VENDOR=$( [ -d vendor ] && echo '-mod=vendor' );
+      #docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}" quay.io;
+      #make push GOFLAGS_VENDOR=$( [ -d vendor ] && echo '-mod=vendor' );
     fi
