--- a/release-tools/travis.yml
+++ b/release-tools/travis.yml
@@ -14,6 +14,11 @@ before_script:
 - wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-$(go env GOARCH) -O bin/dep
 - chmod u+x bin/dep
 - export PATH=$PWD/bin:$PATH
+- if [ "${arch}" == "s390x" ]; then
+        sudo apt-get -qq update && sudo apt install -y ghc cabal-install;
+        sudo cabal update && sudo cabal install ShellCheck==0.6.0;
+        export PATH=$HOME/.cabal/bin:$PATH;
+  fi
 script:
 - make -k all test GOFLAGS_VENDOR=$( [ -d vendor ] && echo '-mod=vendor' )
 after_success:
