--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,16 +8,14 @@ options:
   substitution_option: ALLOW_LOOSE
 steps:
   - name: 'gcr.io/k8s-testimages/gcb-docker-gcloud:v20200421-a2bf5f8'
-    entrypoint: 'bash'
+    entrypoint: make
     env:
-    - DOCKER_CLI_EXPERIMENTAL=enabled
     - VERSION=$_GIT_TAG
     - PULL_BASE_REF=$_PULL_BASE_REF
     - HOME=/root
+    - REGISTRY_NAME=gcr.io/k8s-staging-csi
     args:
-    - '-c'
-    - |
-      make push-multiarch
+    - push-multiarch
 substitutions:
   # _GIT_TAG will be filled with a git-based tag for the image, of the form vYYYYMMDD-hash, and
   # can be used as a substitution
@@ -25,4 +23,3 @@ substitutions:
   # _PULL_BASE_REF will contain the ref that was pushed to trigger this build -
   # a branch like 'master' or 'release-0.2', or a tag like 'v0.2'.
   _PULL_BASE_REF: 'master'
-  _STAGING_PROJECT: 'k8s-staging-csi'
