--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,10 +10,10 @@ steps:
   - name: 'gcr.io/k8s-testimages/gcb-docker-gcloud:v20200421-a2bf5f8'
     entrypoint: make
     env:
-    - REV=$_GIT_TAG
+    - REVISION=$_GIT_TAG
     - PULL_BASE_REF=$_PULL_BASE_REF
     - HOME=/root
-    - REGISTRY_NAME=gcr.io/k8s-staging-csi
+    - REGISTRY=gcr.io/k8s-staging-csi
     args:
     - push-multiarch
 substitutions:
